chore: clean up sonarlint warnings and javadoc